--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -158,6 +158,11 @@
   .contact .grid {
     gap: 0;
   }
+
+  .bottom-bar__list li:nth-of-type(3),
+  .bottom-bar__list li:nth-of-type(4) {
+    display: none;
+  }
 }
 
 .btn {
