--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
   --clr-black: #000;
   --clr-white: #fff;
   --clr-dimgray: #606060;
-  --clr-mediumaquamarine: #60bab2;
+  --clr-darkcyan: #009688;
   --clr-lightgray: #ccc;
   --clr-whitesmoke: #f1f1f1;
   --clr-darkgray: #9e9e9e;
@@ -62,7 +62,7 @@ body {
 }
 
 .sidebar__contact li:first-child a {
-  color: var(--clr-mediumaquamarine);
+  color: var(--clr-darkcyan);
 }
 
 .sidebar__contact li {
@@ -371,7 +371,7 @@ body {
 .pakage__btn .btn {
   margin: 0 auto;
 
-  background-color: var(--clr-dimgray);
+  background-color: var(--clr-darkcyan);
   color: var(--clr-white);
 }
 
@@ -380,7 +380,7 @@ body {
 }
 
 .pakage-pro > p {
-  background-color: var(--clr-dimgray);
+  background-color: var(--clr-darkcyan);
 }
 /* * END PAKAGES */
 /* * START CONTACT */
@@ -437,6 +437,11 @@ body {
   font-size: 1.5rem;
 }
 
+.contact__btn .btn:hover {
+  background-color: var(--clr-lightgray);
+  color: var(--clr-black);
+}
+
 .contact__btn .btn {
   margin-top: 0.2rem;
   border: none;
@@ -486,17 +491,21 @@ body {
 
 .footer__blog-posts > p {
   font-size: 2.4rem;
+  margin-bottom: 1.4rem;
 }
 
 .footer__blog-posts > :nth-child(2) {
   border-bottom: 0.05rem solid var(--clr-lightgray);
 }
 
+.blog-post:hover {
+  background-color: var(--clr-lightgray);
+}
+
 .blog-post {
   display: flex;
   align-items: center;
   padding: 1.2rem 1.6rem;
-  margin-top: 1.2rem;
 }
 
 .blog-post img {
@@ -547,5 +556,9 @@ body {
 .copyright a {
   color: var(--clr-whitesmoke);
   text-decoration: underline;
+}
+
+.copyright a:hover {
+  color: var(--clr-darkgray);
 }
 /* * END FOOTER */
